RbA Developer Org/src/objects/Contact_Account_Junction__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Contacts</relationshipLabel>
        <relationshipName>Contact_Account_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Current Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Resident</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Additional Accounts (Dwellings)</relationshipLabel>
        <relationshipName>Contact_Account_Junctions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Contact Account Junction</label>
    <nameField>
        <displayFormat>CA-{000000}</displayFormat>
        <label>Contact Account Junction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Account Junctions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>